--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -8,8 +8,8 @@
 
 <div class="jumbotron">
         <div class="container">
-          <h1><i>Mantun Kapanintunan</i>: A Job Finder App </h1>
-          <p>The Mantun Kapanintunan: Job Finder App has been developed to help an unemployed people locally find their job easily and way faster. Company will also benefit using this app finding their suitable employees for their businesses. </p>
+          <h1><i>Mantun Kapanintunan</i>: A Job Finder Web App </h1>
+          <p>The Mantun Kapanintunan: Job Finder Web App has been developed to help an unemployed people locally find their job easily and way faster. Company will also benefit using this web app finding their suitable employees for their businesses. </p>
           <p><a class="btn btn-primary btn-lg" href="/registration" role="button">Register</a>
         <a class="btn btn-primary btn-lg" href="/login" role="button">Login</a>
         </p>
