--- a/src/app/registration/registration.html
+++ b/src/app/registration/registration.html
@@ -1,61 +1,78 @@
 <div class="col-lg-12 col-md-6">
-    <uib-tabset active="active">
-        <uib-tab index="0">
-            <uib-tab-heading>
-                <h3>Applicant</h3>
-            </uib-tab-heading>
-            <div class="well">
-                <h1>Looking to get hired?</h1>
-                <form>
-                    <div class="form-group">
-                        <label>Email address</label>
-                        <input type="email" class="form-control" placeholder="Email" ng-model="$ctrl.applicantEmail">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" placeholder="Password" ng-model="$ctrl.applicantPassword">
-                    </div>
-
-                    <div class="form-group">
-                        <input type="password" class="form-control" ng-model="$ctrl.matchApplicantPassword" placeholder="Confirm Password">
-                        <div class="text-danger" ng-show="$ctrl.matchApplicantPassword !== $ctrl.applicantPassword && $ctrl.applicantPassword.length > 0 && $ctrl.matchApplicantPassword.length > 0">Whoops, these don't match</div>
-                    </div>
-                    <p class="text-danger" ng-hide="$ctrl.applicantValid">
-                        Please fill in all fields
-                    </p>
-                    <button type="button" class="btn btn-default" ng-click="$ctrl.registerUser($ctrl.applicantEmail, $ctrl.applicantPassword, 1, $ctrl.applicantValid)" ng-disabled="$ctrl.matchApplicantPassword !== $ctrl.applicantPassword || !$ctrl.matchApplicantPassword">Create Account</button>
-                </form>
-            </div>
-
-        </uib-tab>
-        <uib-tab index="1">
-            <uib-tab-heading>
-                <h3>Business</h3>
-            </uib-tab-heading>
-
-            <div class="well">
-                <h1>Looking for skilled individuals?</h1>
-                <form>
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" placeholder="Email" ng-model="$ctrl.businessEmail">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" ng-model="$ctrl.businessPassword">
-                    </div>
-
-                    <div class="form-group">
-                        <input type="password" class="form-control" ng-model="$ctrl.matchBusinessPassword" placeholder="Confirm Password" required>
-                        <div class="text-danger" ng-show="$ctrl.matchBusinessPassword !== $ctrl.businessPassword && $ctrl.businessPassword.length > 0 && $ctrl.matchBusinessPassword.length > 0">Whoops, these don't match</div>
-            </div>
-            <p class="text-danger" ng-hide="$ctrl.businessValid">
-                Please fill in all fields
+  <uib-tabset active="active">
+    <uib-tab index="0">
+      <uib-tab-heading>
+        <h3>Applicant</h3>
+      </uib-tab-heading>
+      <div class="well">
+        <h1>Looking to get hired?</h1>
+        <form>
+          <div class="form-group">
+            <label>Email address</label>
+            <input type="email" class="form-control" placeholder="Email" ng-model="$ctrl.applicantEmail">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" placeholder="Password" ng-model="$ctrl.applicantPassword">
+            <p class="text-danger" ng-show="!$ctrl.passwordComplex($ctrl.applicantPassword) && $ctrl.applicantPassword.length !== 0">
+              Password should contain atleast 1 number and 1 letter, and is atleast 8 characters.
             </p>
-            <button type="button" ng-disabled="$ctrl.matchBusinessPassword !== $ctrl.businessPassword || !$ctrl.matchBusinessPassword"
-                class="btn btn-default" ng-click="$ctrl.registerUser($ctrl.businessEmail, $ctrl.businessPassword, 2, $ctrl.businessValid)">Create Account</button>
-            </form>
+          </div>
+
+          <div class="form-group">
+            <input type="password" class="form-control" ng-model="$ctrl.matchApplicantPassword" placeholder="Confirm Password">
+            <div class="text-danger" ng-show="$ctrl.matchApplicantPassword !== $ctrl.applicantPassword && $ctrl.applicantPassword.length > 0 && $ctrl.matchApplicantPassword.length > 0">Whoops, these don't match</div>
+          </div>
+          <p class="text-danger" ng-hide="$ctrl.applicantValid">
+            Please fill in all fields
+          </p>
+          <div class="form-group">
+            <p>
+              <input type="checkbox" ng-model="robotApplicant"> I am not a robot
+            </p>
+          </div>
+          <button type="button" class="btn btn-default" ng-click="$ctrl.registerUser($ctrl.applicantEmail, $ctrl.applicantPassword, 1, $ctrl.applicantValid)"
+            ng-disabled="$ctrl.matchApplicantPassword !== $ctrl.applicantPassword || !$ctrl.matchApplicantPassword || (!$ctrl.passwordComplex($ctrl.applicantPassword) && $ctrl.applicantPassword.length !== 0) || !robotApplicant">Create Account</button>
+        </form>
+      </div>
+
+    </uib-tab>
+    <uib-tab index="1">
+      <uib-tab-heading>
+        <h3>Business</h3>
+      </uib-tab-heading>
+
+      <div class="well">
+        <h1>Looking for skilled individuals?</h1>
+        <form>
+          <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" placeholder="Email" ng-model="$ctrl.businessEmail">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" ng-model="$ctrl.businessPassword">
+            <p class="text-danger" ng-show="(!$ctrl.passwordComplex($ctrl.businessPassword) && $ctrl.businessPassword.length !== 0)">
+              Password should contain atleast 1 number and 1 letter, and is atleast 8 characters.
+            </p>
+          </div>
+          <div class="form-group">
+            <input type="password" class="form-control" ng-model="$ctrl.matchBusinessPassword" placeholder="Confirm Password" required>
+            <div class="text-danger" ng-show="$ctrl.matchBusinessPassword !== $ctrl.businessPassword && $ctrl.businessPassword.length > 0 && $ctrl.matchBusinessPassword.length > 0">Whoops, these don't match</div>
+          </div>
+          <div class="form-group">
+            <p>
+              <input type="checkbox" ng-model="robotBusiness"> I am not a robot
+            </p>
+          </div>
+          <p class="text-danger" ng-hide="$ctrl.businessValid">
+            Please fill in all fields
+          </p>
+          <button type="button" ng-disabled="$ctrl.matchBusinessPassword !== $ctrl.businessPassword || !$ctrl.matchBusinessPassword || (!$ctrl.passwordComplex($ctrl.businessPassword) && $ctrl.businessPassword.length !== 0) || !robotBusiness"
+            class="btn btn-default" ng-click="$ctrl.registerUser($ctrl.businessEmail, $ctrl.businessPassword, 2, $ctrl.businessValid)">Create Account</button>
+        </form>
+      </div>
+    </uib-tab>
+  </uib-tabset>
 </div>
-</uib-tab>
-</uib-tabset>
-</div>
+
