--- a/src/app/user/user.html
+++ b/src/app/user/user.html
@@ -10,7 +10,7 @@
             Age
         </label>
         <p>{{ $ctrl.calculateAge($ctrl.userDetails.data.date_of_birth) }}</p>
-        <label for="">Email</label>
+        <label for="">Address</label>
         <p>{{ $ctrl.userDetails.data.email }}</p>
         <label>Contact Number</label>
         <p>{{ $ctrl.userDetails.data.number }}</p>
