--- a/src/app/registration/registration.html
+++ b/src/app/registration/registration.html
@@ -28,7 +28,7 @@
           </p>
           <div class="form-group">
             <p>
-              <input type="checkbox" ng-model="robotApplicant"> I am not a robot
+              <input type="checkbox" ng-model="robotApplicant"> I accept the terms and conditions
             </p>
           </div>
           <button type="button" class="btn btn-default" ng-click="$ctrl.registerUser($ctrl.applicantEmail, $ctrl.applicantPassword, 1, $ctrl.applicantValid)"
@@ -62,7 +62,7 @@
           </div>
           <div class="form-group">
             <p>
-              <input type="checkbox" ng-model="robotBusiness"> I am not a robot
+              <input type="checkbox" ng-model="robotBusiness"> I accept the terms and conditions
             </p>
           </div>
           <p class="text-danger" ng-hide="$ctrl.businessValid">
