--- a/src/app/update/update.html
+++ b/src/app/update/update.html
@@ -31,7 +31,7 @@
       <input type="text" class="form-control" ng-model="$ctrl.userDetails.data.education" />
     </p>
     <p class="form-group">
-      <label>Email Address (this is different from what you use to log in)*</label>
+      <label>Address*</label>
       <input type="text" class="form-control" ng-model="$ctrl.userDetails.data.email" />
     </p>
     <div class="well col-md-12" style="margin-top: 20px;">
