--- a/src/app/update/update.html
+++ b/src/app/update/update.html
@@ -2,24 +2,24 @@
   <div class="col-xs-12" ng-if="$ctrl.userDetails.type === 1">
     <h4>General Information</h4>
     <p class="form-group">
-      <label>First Name*</label>
+      <label>First Name<span class="red-ast">*</span></label>
       <input type="text" class="form-control" ng-model="$ctrl.userDetails.data.first_name" />
     </p>
     <p class="form-group">
-      <label>Last Name*</label>
+      <label>Last Name<span class="red-ast">*</span></label>
       <input type="text" class="form-control" ng-model="$ctrl.userDetails.data.last_name" />
     </p>
-    <label>Date Of Birth* </label>
+    <label>Date Of Birth<span class="red-ast">*</span> </label>
     <pre>Selected date is: <em>{{ $ctrl.userDetails.data.date_of_birth | date: 'yyyy-MM-dd' }}</em></pre>
     <div>
       <div uib-datepicker ng-model="$ctrl.userDetails.data.date_of_birth" class="well well-sm" datepicker-options="options"></div>
     </div>
     <p class="form-group">
-      <label>Contact Number*</label>
+      <label>Contact Number<span class="red-ast">*</span></label>
       <input type="text" class="form-control" ng-model="$ctrl.userDetails.data.number" />
     </p>
     <p class="form-group">
-      <label>Highest Level of Education Attained*</label>
+      <label>Highest Level of Education Attained<span class="red-ast">*</span></label>
       <select class="form-control" ng-model="$ctrl.userDetails.data.education_attained">
         <option ng-value="1">Elementary or lower</option>
         <option ng-value="2">High School</option>
@@ -27,11 +27,11 @@
       </select>
     </p>
     <p class="form-group">
-      <label>Education*</label>
+      <label>Education<span class="red-ast">*</span></label>
       <input type="text" class="form-control" ng-model="$ctrl.userDetails.data.education" />
     </p>
     <p class="form-group">
-      <label>Address*</label>
+      <label>Address<span class="red-ast">*</span></label>
       <input type="text" class="form-control" ng-model="$ctrl.userDetails.data.email" />
     </p>
     <div class="well col-md-12" style="margin-top: 20px;">
