--- a/src/app/matching/matching.html
+++ b/src/app/matching/matching.html
@@ -46,6 +46,7 @@
     </div>
     <div class="modal-body" id="modal-body">
       <h3>{{ $ctrl.match.job.job_title }}</h3>
+      <h4>{{ $ctrl.match.business.business.data.business_name }}</h4>       
       <p>
         {{ $ctrl.match.job.description |  limitTo:200 }}{{ $ctrl.match.job.description.length > 200 ? '...' : '' }}
       </p>
@@ -55,6 +56,7 @@
             <li ng-repeat='skill in $ctrl.match.job.matchingSkills'>
               {{ skill.aSkill }}({{ skill.aYears }})
             </li>
+            <br>           
           </ul> 
         </p>
       </div>
